<resources>

    <string name="app_name">VTS for Android</string>
    <string name="appintro_antivirus">Antivirus</string>
    <string name="appintro_antivirus_description">Antivirus does not make you more secure, they generally make you much less secure by greatly increasing the attack surface.</string>
    <string name="appintro_issues">Known issues</string>
    <string name="appintro_issues_description">If your device reboots, or a test hangs, the device is likely vulnerable, but our testing cant determine this with certainty.</string>
    <string name="appintro_security">Security</string>
    <string name="appintro_security_description">The security of the device changes overtime, make sure you run periodically scans.</string>
    <string name="appintro_sharing">Sharing</string>
    <string name="appintro_sharing_description">Sharing the tests results will help to increase the knowledge about the android devices that contains security issues.</string>
    <string name="checking_updates">Checking for application updates...</string>
    <string name="cve_date">"CVE Date:  "</string>
    <string name="cvssv2">"CVSSV2:  "</string>
    <string name="description">Description</string>
    <string name="device_info_abi_list">"CPU ABI LIST: "</string>
    <string name="device_info_build_brand">"Build Brand: "</string>
    <string name="device_info_build_fingerprint">"Build Fingerprint: "</string>
    <string name="device_info_build_id">"Build ID: "</string>
    <string name="device_info_build_manufacturer">"Build Manufacturer: "</string>
    <string name="device_info_build_model">"Build Model: "</string>
    <string name="device_info_build_release">"Build Release: "</string>
    <string name="device_info_build_sdk">"Build SDK: "</string>
    <string name="device_info_cpu_abi">"CPU ABI: "</string>
    <string name="device_info_cpu_abi2">"CPU ABI2: "</string>
    <string name="device_info_kernel_version">"Kernel Version: "</string>
    <string name="dialog_automatic_sharing_description">Do you want automatically share the scan results for research purpose? The device information collected does not contains unique identifiers or private information. Nothing related to your Google (or any other) account is collected.</string>
    <string name="dialog_automatic_sharing_title">Sharing scan results</string>
    <string name="dismiss">Dismiss</string>
    <string name="downloading_update">Downloading the new version.</string>
    <string name="empty_results">Start the scan to get the results</string>
    <string name="error_exporting_results">Error exporting the results.</string>
    <string name="error_test">Error running the test:\n%s</string>
    <string name="existing_test_updated">An existing vulnerability test has been updated</string>
    <string name="export_results">Export results</string>
    <string name="global_notsharing">Not sharing</string>
    <string name="global_sharing">Sharing</string>
    <string name="Impact">Impact</string>
    <string name="information_not_available">Information not available yet.</string>
    <string name="loading">Loading</string>
    <string name="menu_check_for_updates">Check for updates</string>
    <string name="menu_share_results_automatically">Share results automatically</string>
    <string name="more_information">More Information</string>
    <string name="my_device_is_vulnerable_info">Now What?</string>
    <string name="names">Names</string>
    <string name="no_update_available">There are no updates available.</string>
    <string name="notification_new_tests">New tests are available</string>
    <string name="patches">Patches</string>
    <string name="run_tests">Please run the tests first</string>
    <string name="scan_details">Scan details</string>
    <string name="scan_details_number_failed_tests">Number of failed tests:</string>
    <string name="scan_details_number_tests">Number of tests:</string>
    <string name="scan_details_secure_message">Your device is secure</string>
    <string name="scan_details_vulnerable_message">Your device is vulnerable</string>
    <string name="share_results_via">Share results via</string>
    <string name="show_details">Show Details</string>
    <string name="splashscreen_description">Android Vulnerability Test Suite</string>
    <string name="start">Start</string>
    <string name="submit_results">Share for Research</string>
    <string name="test_result_failure">Vulnerable</string>
    <string name="test_result_success">Not Vulnerable</string>
    <string name="update">Update</string>
    <string name="update_avaiable_description">A new update is available (version %s). Do you want to update to the latest version?</string>
    <string name="update_available_title">An update is available</string>
    <string name="update_error">It was not possible to check for updates. Please try again later.</string>
    <string name="title_activity_open_source_licences">Open source licences</string>
    <string name="licence_info">Some parts of the vulnerability descriptions and impact information are
        reproduced from work created and shared by the Android Open Source Project and used
        according to terms described in the Creative Commons 2.5 Attribution License.
        \n\n\n\n<b>AXML</b>
        \n\nCopyright (C) 2012 by Xavier GOUCHET (http://xgouchet.fr, android@xgouchet.fr)
        MIT Licence / Expat
        \n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this
        software and associated documentation files (the \"Software\", to deal in the Software
        without restriction, including without limitation the rights to use, copy, modify, merge,
        publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons
        to whom the Software is furnished to do so, subject to the following conditions:
        \n\nThe above copyright notice and this permission notice shall be included in all copies or
        substantial portions of the Software.
        \n\nTHE SOFTWARE IS PROVIDED \"AS IS\",
        WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
        WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO
        EVENT SHALL THE AUTHORS ( XAVIER GOUCHET ) BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
        CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="opensource_licences">Open source licences</string>
    <string name="update_available">A new update is available for VTS for Android, open the app and check for updates to download the latest version.</string>

</resources>
