<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/scan_details_device_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/scan_details_secure_message"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/scan_details_number_tests"/>

        <TextView
            android:id="@+id/scan_details_number_tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="10"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingTop="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/scan_details_number_failed_tests"/>

        <TextView
            android:id="@+id/scan_details_failed_tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="10"/>

    </LinearLayout>
    
</LinearLayout>